# ComplianceCopilot

./: .gitignore  README.md
backend/: context_creator.py  main.py  package-lock.json  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  main.tsx
