[project]
name = "compliancecopilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.135.3",
    "langchain>=1.2.15",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.1",
    "ollama>=0.6.1",
    "pypdf>=6.10.0",
    "python-multipart>=0.0.26",
    "requests>=2.33.1",
    "sentence-transformers>=5.4.0",
    "unicorn>=2.1.4",
    "uvicorn>=0.44.0",
]
